--- a/数据库/事务/3.事务隔离.md
+++ b/数据库/事务/3.事务隔离.md
@@ -2,13 +2,6 @@
 
 **事务隔离**——这是数据库并发控制的核心机制。
 
-| 隔离级别 | 脏读   | 不可重复读 | 幻读   | 性能影响 | 典型默认设置               |
-| -------- | ------ | ---------- | ------ | -------- | -------------------------- |
-| 读未提交 | ❌ 允许 | ❌ 允许     | ❌ 允许 | 最低     | SQL Server（默认）         |
-| 读已提交 | ✅ 防止 | ❌ 允许     | ❌ 允许 | 低       | PostgreSQL, Oracle（默认） |
-| 可重复读 | ✅ 防止 | ✅ 防止     | ❌ 允许 | 中       | MySQL（InnoDB默认）        |
-| 串行化   | ✅ 防止 | ✅ 防止     | ✅ 防止 | 高       | 需显式指定                 |
-
 ## 一、核心定义
 
 **事务隔离**是指数据库管理系统控制**多个并发事务**之间的相互影响程度的机制。它决定了：
@@ -198,12 +191,12 @@ BEGIN TRANSACTION;
 
 ## 六、隔离级别与并发问题关系
 
-| 隔离级别 | 脏读   | 不可重复读 | 幻读   | 丢失更新 | 写偏斜 |
-| -------- | ------ | ---------- | ------ | -------- | ------ |
-| 读未提交 | ❌ 可能 | ❌ 可能     | ❌ 可能 | ❌ 可能   | ❌ 可能 |
-| 读已提交 | ✅ 防止 | ❌ 可能     | ❌ 可能 | ❌ 可能   | ❌ 可能 |
-| 可重复读 | ✅ 防止 | ✅ 防止     | ❌ 可能 | ❌ 可能   | ❌ 可能 |
-| 串行化   | ✅ 防止 | ✅ 防止     | ✅ 防止 | ✅ 防止   | ✅ 防止 |
+| 隔离级别 | 脏读   | 不可重复读 | 幻读   | 丢失更新 | 写偏斜 | 死锁风险 |
+| -------- | ------ | ---------- | ------ | -------- | ------ | -------- |
+| 读未提交 | ❌ 可能 | ❌ 可能     | ❌ 可能 | ❌ 可能   | ❌ 可能 | 低       |
+| 读已提交 | ✅ 防止 | ❌ 可能     | ❌ 可能 | ❌ 可能   | ❌ 可能 | 中       |
+| 可重复读 | ✅ 防止 | ✅ 防止     | ❌ 可能 | ❌ 可能   | ❌ 可能 | 高       |
+| 串行化   | ✅ 防止 | ✅ 防止     | ✅ 防止 | ✅ 防止   | ✅ 防止 | 最高     |
 
 ## 七、实际选择策略
 
