--- a/数据库/事务/知识点.md
+++ b/数据库/事务/知识点.md
@@ -12,3 +12,16 @@
 幻读：读取了其它事务新增/删除的数据，针对insert和delete操作
 
 - 解决：使用表级锁，锁定整张表，事务A多次读取后才释放锁，这时才允许其它事务新增/删除数据。
+
+## MySQL 隐式与显式锁定
+
+### 隐式锁定
+
+MySQL 的 InnoDB 存储引擎采用两段锁协议，会根据隔离级别在需要时自动加锁（X/S），并且所有的锁都是在同一时刻被释放，这被称为隐式锁定。
+
+### 显示锁定
+
+InnoDB 也可以使用特定的语句进行显示锁定：
+
+- 共享锁：`SELECT ... LOCK In SHARE MODE;`
+- 互斥锁：`SELECT ... FOR UPDATE;`
