--- a/数据库/事务/5.锁机制.md
+++ b/数据库/事务/5.锁机制.md
@@ -329,29 +329,8 @@ SELECT * FROM table FOR UPDATE;
 COMMIT; -- 所有锁同时释放
 ```
 
-## 九、分布式锁
-
-### 1. **基于数据库的分布式锁**
-```sql
--- 创建锁表
-CREATE TABLE distributed_lock (
-    lock_name VARCHAR(100) PRIMARY KEY,
-    lock_owner VARCHAR(100),
-    acquired_at TIMESTAMP,
-    expires_at TIMESTAMP
-);
-
--- 获取锁（乐观锁方式）
-INSERT INTO distributed_lock (lock_name, lock_owner, acquired_at, expires_at)
-VALUES ('order_processing', 'server1', NOW(), DATE_ADD(NOW(), INTERVAL 30 SECOND))
-ON DUPLICATE KEY UPDATE 
-    lock_owner = IF(expires_at < NOW(), VALUES(lock_owner), lock_owner),
-    acquired_at = IF(expires_at < NOW(), VALUES(acquired_at), acquired_at),
-    expires_at = IF(expires_at < NOW(), VALUES(expires_at), expires_at);
-```
-
 ### 2. **Redis分布式锁**
-## 十、实战案例
+## 九、实战案例
 
 ### 案例1：高并发秒杀系统锁设计
 ```sql
@@ -436,7 +415,7 @@ SET status = 'COMPLETED',
 WHERE id = @task_id;
 ```
 
-## 十一、最佳实践总结
+## 十、最佳实践总结
 
 1. **最小化原则**：锁的粒度尽量小，时间尽量短
 2. **顺序访问**：按固定顺序访问资源避免死锁
@@ -446,7 +425,7 @@ WHERE id = @task_id;
 6. **测试验证**：压力测试验证锁机制
 7. **文档记录**：记录关键业务场景的锁策略
 
-## 十二、常见问题排查
+## 十一、常见问题排查
 
 ### Q1：为什么我的查询被阻塞？
 ```sql
