--- a/数据库/事务/6.三级封锁与两段锁.md
+++ b/数据库/事务/6.三级封锁与两段锁.md
@@ -220,13 +220,12 @@ COMMIT; -- 一次性释放所有锁
 ### 关系分析
 ```
 三级封锁协议：关注"什么时间"加"什么锁"来解决"什么问题"
-两段锁协议：   关注锁的"获取和释放顺序"来保证"可串行化"
+两段锁协议：关注锁的"获取和释放顺序"来保证"可串行化"
 ```
 
-**重要发现**：
 - 遵守**三级封锁协议**的事务**不一定**遵守两段锁协议
 - 遵守**两段锁协议**的事务**不一定**达到三级封锁的效果
-- 两者结合才能既保证可串行化又解决具体不一致问题
+- **两者结合**才能既保证可串行化又解决具体不一致问题
 
 ### 对比表格
 | 特性         | 三级封锁协议       | 两段锁协议        |
@@ -253,121 +252,7 @@ SHOW ENGINE INNODB STATUS\G
 -- 3. 需要显式锁时使用FOR UPDATE或LOCK IN SHARE MODE
 ```
 
-## 五、实战案例分析
-
-### 案例1：银行转账系统
-```sql
--- 需要：防止丢失更新 + 脏读 + 不可重复读
--- 方案：三级封锁协议 + 严格两段锁
-
-CREATE PROCEDURE transfer_funds(
-    IN from_account INT,
-    IN to_account INT,
-    IN amount DECIMAL(10,2)
-)
-BEGIN
-    DECLARE EXIT HANDLER FOR SQLEXCEPTION
-    BEGIN
-        ROLLBACK;
-        RESIGNAL;
-    END;
-    
-    START TRANSACTION;
-    
-    -- 三级封锁：读前加S锁（防止脏读和不可重复读）
-    -- 严格2PL：锁保持到事务结束
-    SELECT balance INTO @from_balance 
-    FROM accounts 
-    WHERE id = from_account 
-    FOR SHARE;  -- S锁
-    
-    SELECT balance INTO @to_balance 
-    FROM accounts 
-    WHERE id = to_account 
-    FOR SHARE;  -- S锁
-    
-    -- 检查余额
-    IF @from_balance >= amount THEN
-        -- 三级封锁：写前加X锁（防止丢失更新）
-        UPDATE accounts 
-        SET balance = balance - amount 
-        WHERE id = from_account;  -- 自动X锁
-        
-        UPDATE accounts 
-        SET balance = balance + amount 
-        WHERE id = to_account;    -- 自动X锁
-        
-        -- 记录交易
-        INSERT INTO transactions (...) VALUES (...);
-        
-        COMMIT;  -- 严格2PL：提交时释放所有锁
-    ELSE
-        ROLLBACK;
-        SIGNAL SQLSTATE '45000' 
-            SET MESSAGE_TEXT = '余额不足';
-    END IF;
-END;
-```
-
-### 案例2：库存管理系统
-```sql
--- 高并发场景，需要平衡性能与一致性
--- 方案：一级封锁 + 乐观锁重试
-
-CREATE PROCEDURE reduce_stock(
-    IN product_id INT,
-    IN reduce_qty INT
-)
-BEGIN
-    DECLARE retry_count INT DEFAULT 0;
-    DECLARE max_retries INT DEFAULT 3;
-    DECLARE success BOOLEAN DEFAULT FALSE;
-    
-    WHILE retry_count < max_retries AND NOT success DO
-        SET retry_count = retry_count + 1;
-        
-        START TRANSACTION;
-        
-        -- 一级封锁：修改前加X锁（防止丢失更新）
-        -- 但不加S锁（接受脏读风险，提高性能）
-        SELECT stock, version 
-        INTO @current_stock, @current_version
-        FROM products 
-        WHERE id = product_id 
-        FOR UPDATE;  -- X锁
-        
-        IF @current_stock >= reduce_qty THEN
-            -- 乐观锁检查
-            UPDATE products 
-            SET stock = stock - reduce_qty,
-                version = version + 1
-            WHERE id = product_id 
-              AND version = @current_version;
-            
-            IF ROW_COUNT() = 1 THEN
-                COMMIT;
-                SET success = TRUE;
-            ELSE
-                ROLLBACK;
-                -- 版本冲突，等待后重试
-                DO SLEEP(0.1 * retry_count);
-            END IF;
-        ELSE
-            ROLLBACK;
-            SIGNAL SQLSTATE '45000' 
-                SET MESSAGE_TEXT = '库存不足';
-            SET success = TRUE;  -- 结束循环
-        END IF;
-    END WHILE;
-    
-    IF NOT success THEN
-        SIGNAL SQLSTATE '45000' 
-            SET MESSAGE_TEXT = '更新失败，请重试';
-    END IF;
-END;
-```
-
-## 六、常见问题与解决方案
+## 五、常见问题与解决方案
 
 ### 问题1：死锁（Deadlock）
 ```sql
@@ -432,7 +317,7 @@ JOIN information_schema.INNODB_TRX r ON r.trx_id = w.requesting_trx_id;
 -- 3. 使用读已提交隔离级别
 ```
 
-## 七、现代数据库的演变
+## 六、现代数据库的演变
 
 ### MVCC对传统锁协议的改变
 ```
@@ -489,9 +374,3 @@ END IF;
 - 实现了这些协议的**思想精髓**
 - 结合了MVCC等**新技术**
 - 提供了**灵活的配置选项**
-
-理解这些理论有助于：
-- 设计正确的并发控制方案
-- 诊断和解决锁相关问题
-- 选择合适的数据库配置
-- 优化应用性能
