--- a/数据库/事务/知识点.md
+++ b/数据库/事务/知识点.md
@@ -25,3 +25,63 @@ InnoDB 也可以使用特定的语句进行显示锁定：
 
 - 共享锁：`SELECT ... LOCK In SHARE MODE;`
 - 互斥锁：`SELECT ... FOR UPDATE;`
+
+## MVCC
+
+### Q1：MVCC会导致数据不一致吗？
+
+```sql
+-- 不会，MVCC通过版本控制保证一致性
+-- 示例：银行转账
+
+-- 事务A
+BEGIN;
+SELECT balance FROM accounts WHERE id = 1; -- 快照读：1000
+-- 基于1000做业务逻辑...
+
+-- 事务B同时更新
+UPDATE accounts SET balance = 900 WHERE id = 1;
+COMMIT;
+
+-- 事务A继续
+UPDATE accounts SET balance = balance - 100 WHERE id = 1;
+-- 这里会看到最新值900，更新为800
+-- 没有丢失更新，保证一致性
+COMMIT;
+```
+
+### Q2：MVCC如何处理幻读？
+
+```sql
+-- MySQL InnoDB的可重复读+MVCC
+BEGIN;
+-- 获取快照
+SELECT * FROM orders WHERE amount > 1000; -- 返回3行
+
+-- 其他事务插入新订单并提交
+INSERT INTO orders (amount) VALUES (2000);
+
+-- 再次查询
+SELECT * FROM orders WHERE amount > 1000; -- 仍返回3行（快照读）
+-- 但如果是当前读：
+SELECT * FROM orders WHERE amount > 1000 FOR UPDATE;
+-- 可能看到4行（幻读），所以InnoDB使用Next-Key Lock
+```
+
+### Q3：什么时候选择MVCC vs 传统锁？
+
+```
+选择MVCC当：
+- 读多写少
+- 需要高并发读写
+- 可以接受一定存储开销
+- 需要时间点查询
+
+选择传统锁当：
+- 写多读少
+- 存储空间敏感
+- 简单并发控制足够
+- 实时强一致性要求
+```
+
+## 
