--- a/数据库/事务/知识点.md
+++ b/数据库/事务/知识点.md
@@ -84,4 +84,8 @@ SELECT * FROM orders WHERE amount > 1000 FOR UPDATE;
 - 实时强一致性要求
 ```
 
-## 
+## 封锁和MVCC
+
+- 封锁通过加锁能解决多个事务同时执行时出现的并发一致性问题，例如读和读不互斥关系，读写锁中读和写操作仍然是互斥的。
+
+- MVCC是一种多版本并发控制的方法，用更好的方式去处理读-写冲突，写写冲突通过加悲观锁和乐观锁实现。
