--- a/数据库/事务/7.MVCC.md
+++ b/数据库/事务/7.MVCC.md
@@ -405,3 +405,144 @@ Next-Key Lock 是保证数据一致性的功臣，但它也是**造成死锁（D
 
 因为它锁住的范围往往比你想象的要大（尤其是范围查询或普通索引查询时），很容易误伤其他事务。
 
+## 五、MVCC读写操作详解
+
+### 1. **SELECT操作（读）**
+
+```sql
+-- 事务A：读操作
+BEGIN;
+SET TRANSACTION ISOLATION LEVEL REPEATABLE READ;
+
+-- 获取快照（事务开始时）
+-- 快照内容：活跃事务列表、最小事务ID等
+
+SELECT balance FROM accounts WHERE id = 1;
+-- 可见性判断：
+-- 1. 查找id=1的最新版本
+-- 2. 检查trx_id是否对当前事务可见
+-- 3. 如果不可见，沿版本链（undo log）查找旧版本
+-- 4. 返回合适版本的数据
+
+-- 此时事务B可以并发更新，不影响本事务的读取
+COMMIT;
+```
+
+### 2. **UPDATE操作（写）**
+
+```sql
+-- 事务A：更新操作
+BEGIN;
+
+-- 1. 获取行锁（排他锁）
+-- 2. 检查当前行版本是否可见
+-- 3. 创建新版本：
+--    - 复制当前行到undo log
+--    - 修改数据
+--    - 设置新行的trx_id为当前事务ID
+--    - 设置旧行的xmax为当前事务ID
+-- 4. 返回成功
+
+UPDATE accounts SET balance = balance - 100 WHERE id = 1;
+
+-- 此时其他事务：
+-- 读事务：看到旧版本（快照读）
+-- 写事务：等待行锁释放
+
+COMMIT;
+```
+
+### 3. **DELETE操作**
+
+```sql
+-- 事务A：删除操作
+BEGIN;
+
+-- 1. 获取行锁
+-- 2. 设置行的xmax为当前事务ID
+-- 3. 不立即物理删除，标记为删除
+
+DELETE FROM accounts WHERE id = 1;
+
+-- 其他事务：
+-- 快照读：看不到被删除的行（xmax检查）
+-- 当前读：看到行被锁定
+
+COMMIT;
+-- 实际删除由VACUUM/清理线程完成
+```
+
+### 4. **INSERT操作**
+
+```sql
+-- 事务A：插入操作
+BEGIN;
+
+-- 1. 创建新行
+-- 2. 设置xmin为当前事务ID
+-- 3. xmax为0
+
+INSERT INTO accounts (id, balance) VALUES (2, 2000);
+
+-- 其他事务可见性：
+-- 已提交：可见（xmin < 快照xmin）
+-- 未提交：不可见（xmin在活跃事务列表）
+
+COMMIT;
+```
+
+## 六、MVCC的优势与挑战
+
+### 1. **优势**
+
+```sql
+-- 1. 高并发读写
+-- 读不阻塞写，写不阻塞读
+BEGIN;
+-- 事务A：读
+SELECT * FROM large_table; -- 快照读，不加锁
+
+-- 事务B：写（并发）
+UPDATE large_table SET col = 'new'; -- 创建新版本
+
+-- 2. 一致性读
+-- 整个事务看到一致的数据快照
+SET TRANSACTION ISOLATION LEVEL REPEATABLE READ;
+BEGIN;
+SELECT * FROM accounts; -- 快照A
+-- 其他事务更新...
+SELECT * FROM accounts; -- 仍是快照A
+
+-- 3. 减少锁竞争
+-- 不需要读锁，减少死锁概率
+```
+
+### 2. **挑战与解决方案**
+
+```sql
+-- 挑战1：存储空间增长（版本膨胀）
+-- 解决方案：优化VACUUM
+-- 调整autovacuum参数
+ALTER TABLE accounts SET (
+    autovacuum_vacuum_scale_factor = 0.05,
+    autovacuum_vacuum_threshold = 1000
+);
+
+-- 挑战2：长事务问题
+-- 解决方案：监控和限制
+-- 设置超时
+SET idle_in_transaction_session_timeout = '300s';
+SET lock_timeout = '30s';
+
+-- 挑战3：更新冲突
+-- 解决方案：乐观锁重试
+UPDATE products 
+SET stock = stock - 1, 
+    version = version + 1
+WHERE id = 1 AND version = @old_version;
+
+IF ROW_COUNT() = 0 THEN
+    -- 冲突，重试逻辑
+END IF;
+```
+
