--- a/数据库/2.事务/4.事务隔离示例.md
+++ b/数据库/2.事务/4.事务隔离示例.md
@@ -1,6 +1,6 @@
 # 事务隔离示例
 
-![image-20260112202159790](assets/image-20260112202159790.png)
+![image-20260112202159790](image-20260112202159790.png)
 
 ## 假设
 
