--- a/数据库/3.SQL/语法.md
+++ b/数据库/3.SQL/语法.md
@@ -16,5 +16,25 @@ SQL 支持三种注释：##、---、/\* \*/
 
 数据库创建与使用
 
-- CREATE DATABASE test;
-- USE test;
+- `CREATE DATABASE test;`
+- `USE test;`
+
+## 二、创建表
+
+`CREATE TABLE mytable (…….)`
+
+- 名称、类型、约束、主键、外键
+
+## 三、修改表
+
+添加列 ADD 
+
+- `ALTER TABLE mytable ADD col CHAR(20);`
+
+删除列 DROP 
+
+- `ALTER TABLE mytable DROP COLUMN col;`
+
+删除表
+
+- `DROP TABLE mytable;`
