--- a/数据库/3.SQL/2.连接与子查询.md
+++ b/数据库/3.SQL/2.连接与子查询.md
@@ -2,18 +2,65 @@
 
 **连接（JOIN）是处理“横向”的关系（表与表的拼接），而子查询（Subquery）是处理“纵向”或“嵌套”的逻辑（一步步推导结果）。**
 
----
-
 ## 第一部分：连接查询 (JOIN)
 
-* `INNER JOIN`: **交集**。两张表都有匹配数据才返回。
-* `LEFT JOIN`: **左侧全集**。左表所有数据都返回，右表没匹配的显示 `NULL`。
-* `RIGHT JOIN`: **右侧全集**。
-* `FULL JOIN`: **并集**（MySQL不直接支持，需用 `UNION` 模拟）。
+以两个最经典的业务表为例来演示：
 
-上述为基本的连接，但在实际复杂的业务（比如你的黑名单或通话记录分析）中，以下两种场景非常关键：
+* **`users` 表** (左表)：用户基础信息。
+* **`orders` 表** (右表)：用户的订单信息（并不是每个用户都有订单）。
 
-### 1. 自连接 (Self-Join)
+### 1. INNER JOIN：内连接 (交集)
+
+这是最常用的连接方式。只返回两个表中**连接字段匹配成功**的行。
+
+* **逻辑**：只有既注册了又下了单的用户才会被查出来。
+* **场景**：查询“所有下过单的活跃用户”。
+
+```sql
+SELECT u.name, o.order_id
+FROM users u
+INNER JOIN orders o ON u.id = o.user_id;
+```
+
+### 2. LEFT JOIN：左连接 (左侧全集 + 交集)
+
+以左表（`users`）为主表，返回左表所有行。如果右表（`orders`）中没有匹配的记录，则右侧字段显示为 `NULL`。
+
+* **逻辑**：列出所有用户，如果有订单就显示订单号，没订单就留空。
+* **场景**：用户列表展示、报表统计（包括未下单用户）。
+
+```sql
+SELECT u.name, o.order_id
+FROM users u
+LEFT JOIN orders o ON u.id = o.user_id;
+```
+
+### 3. RIGHT JOIN：右连接 (右侧全集 + 交集)
+
+以右表（`orders`）为主表。
+
+* **提示**：在实际开发中，**极少使用 RIGHT JOIN**。通常我们会习惯性地把主表放在左边（使用 LEFT JOIN），以符合从左到右的阅读逻辑。RIGHT JOIN 往往可以被 LEFT JOIN 替代（只需交换表的位置）。
+
+### 4. FULL OUTER JOIN：全连接 (并集)
+
+返回两个表中所有的行。只要其中一个表存在记录，就会返回。不匹配的地方填 `NULL`。
+
+* **注意**：MySQL 原生不支持 `FULL JOIN`，通常需要通过 `UNION` 来模拟（把 LEFT JOIN 和 RIGHT JOIN 的结果合并）。
+
+```sql
+-- MySQL 模拟 FULL JOIN
+SELECT u.name, o.order_id FROM users u LEFT JOIN orders o ON u.id = o.user_id
+UNION
+SELECT u.name, o.order_id FROM users u RIGHT JOIN orders o ON u.id = o.user_id;
+```
+
+### 5. CROSS JOIN：笛卡尔积 (全排列)
+
+这是最危险的连接。它不需要连接条件，返回的是左表行数 × 右表行数的结果。
+
+* **后果**：如果表 A 有 1000 行，表 B 有 1000 行，结果就是 1,000,000 行。在生产库误用会导致数据库 CPU 飙升甚至宕机。
+
+### 6. 自连接 (Self-Join)
 
 这是很多人的盲区。当**数据和它层级关系的数据都在同一张表里**时，我们需要“自己连自己”。
 
@@ -29,7 +76,7 @@ LEFT JOIN employee m         -- 把同一张表看作“经理表”
     ON e.manager_id = m.id;  -- 员工的经理ID = 经理的ID
 ```
 
-### 2. ON 与 WHERE 的过滤陷阱 (Expert Insight)
+### 7. ON 与 WHERE 的过滤陷阱 (Expert Insight)
 
 在使用 `LEFT JOIN` 时，过滤条件写在 `ON` 后和写在 `WHERE` 后，结果截然不同。这是导致数据丢失的常见原因。
 
