--- a/数据库/4.MySQL/知识点.md
+++ b/数据库/4.MySQL/知识点.md
@@ -8,11 +8,11 @@
 2. sql语句+索引；
 3. 加缓存；
 4. 主从复制，读写分离；
-5. 垂直拆分，根据模块的耦合度，将一个大的系统分为多个小的系统，也就是分布式系统；
+5. 垂直拆分，根据模块的耦合度，将一个大系统分为多个小系统，即分布式系统；
 6. 水平切分，针对数据量大的表：
    - 选择一个合理的sharding key；
    - 表结构也要改动，做一定的冗余；
-   - 应用也要改，sql中尽量带sharding key，将数据定位到限定的表上去查，而不是扫描全部的表。
+   - 应用也要改动，sql中尽量带sharding key，将数据定位到限定表，而不是扫描全部的表。
 
 ## 数据库结构优化
 
